--- a/ux.html
+++ b/ux.html
@@ -45,7 +45,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://channelvas.workable.com/j/C4BC9359A7'>ChannelVAS - Jobs: UX Designer - Apply online</a></h5> 
+<h5><a href='https://channelvas.workable.com/j/C4BC9359A7'>ChannelVAS - Jobs: UX Designer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -73,7 +73,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://tbi.applytojob.com/apply/FA4ibo3rqL/UX-Designer'>UX Designer - Think Company - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tbi.applytojob.com/apply/FA4ibo3rqL/UX-Designer'>UX Designer - Think Company - Career Page</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -83,7 +83,7 @@
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/corelight/jobs/1788691'>Job Application for Engineering: Lead UI Engineer (UI/UX) at Job Board</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/corelight/jobs/1788691'>Job Application for Engineering: Lead UI Engineer (UI/UX) at Job Board</a></h5> 
 <p><span class="badge badge-light">San Francisco, California San Francisco Columbus</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -159,7 +159,7 @@
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sharpist.join.com/jobs/246378-ui-ux-designer'>Job @ Sharpist (Berlin): UI/(UX) Designer | JOIN</a></h5> 
+<h5><a href='https://sharpist.join.com/jobs/246378-ui-ux-designer'>Job @ Sharpist (Berlin): UI/(UX) Designer | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -183,7 +183,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/wehkamp/743999689148616-digital-designer-ux-ui-brand-'>wehkamp Digital Designer (UX/UI, Brand) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/wehkamp/743999689148616-digital-designer-ux-ui-brand-'>wehkamp Digital Designer (UX/UI, Brand) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -195,7 +195,7 @@
 <p><span class="badge badge-light">Seattle Sydney</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/tytConsulting/743999692211731-auxiliar-administrativa-giro-restaurantero'>tyt consulting AUXILIAR ADMINISTRATIVA GIRO RESTAURANTERO | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/tytConsulting/743999692211731-auxiliar-administrativa-giro-restaurantero'>tyt consulting AUXILIAR ADMINISTRATIVA GIRO RESTAURANTERO | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -237,7 +237,7 @@
 <p><span class="badge badge-light">Dhaka, Bangladesh</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://maisonmoderne.recruiterbox.com/jobs/fk03flh/'>
+<h5><a href='https://maisonmoderne.recruiterbox.com/jobs/fk03flh/'>
     UI/UX Designer - 1 year contract (W/M) at Maison Moderne
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -247,7 +247,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://mekari.recruiterbox.com/jobs/fk03f7q/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mekari.recruiterbox.com/jobs/fk03f7q/'>
     UX Writer at MEKARI (PT. Mid Solusi Nusantara)
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -280,7 +280,7 @@ for candidates with solid technical foundations and a desire to continue learnin
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/adhocteam/jobs/4358212002'>Job Application for UX Designer (remote) at Ad Hoc</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/adhocteam/jobs/4358212002'>Job Application for UX Designer (remote) at Ad Hoc</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -334,7 +334,7 @@ or check?...</p>
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/tenable-network-security/job/olVzafwJ'>Tenable Careers - Senior UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/tenable-network-security/job/olVzafwJ'>Tenable Careers - Senior UX Designer</a></h5> 
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -385,7 +385,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://divido.workable.com/j/AAC99A6935'>Divido - Jobs: UX/UI Designer - Apply online</a></h5> 
+<h5><a href='https://divido.workable.com/j/AAC99A6935'>Divido - Jobs: UX/UI Designer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
